colocado novos inputs e estilizações de css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <form>
       <input type="text" name="Login" placeholder="login" /><br />
       <select name="papel">
-        <option>Admin</option>
-        <option>Usuario</option>
-      </select>
+        <option value="0">Admin</option>
+        <option value="1" selected>Usuario</option>
+      </select> <br>
+      <input type="password" name="senha"> <br>
+      <input type="number" min="0" max="120" step="0.01">
       <input type="submit">
     </form>
   </body>
