--- a/google.html
+++ b/google.html
@@ -9,10 +9,13 @@
       <div class="container">
           <div class="tamanho2"></div>
           <div class="tamanho6">
-            <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="search">
-                    </form>
+              <div>
+                <form action="https://www.google.com/search">
+                    <input type="text" name="q">
+                    <input type="submit" value="search">
+                        </form>
+              </div>
+            
           </div>
           <div class="tamanho2"></div>
 
